Updated Note diary/2025-12-10.md

--- a/diary/2025-12-10.md
+++ b/diary/2025-12-10.md
@@ -1,13 +1,13 @@
 # 2025년 12월 10일_ 회계사 공부시작
 
- ## 현재 나의 상황  
+## 현재 나의 상황  
 * 서울 소재 공기업 근무 (2016년 입사, 약 10년 근무, 직급 과장)  
 
 * 회사 임금, 퇴직금 총괄담당자 (1천명이상)
 
  ## 회계사 공부 계기  
 
-**토사구팽&와신상담**  
+**토사구팽&와신상담**  #토사구팽 #와신상담
 
  저는 서울 소재 공기업의 총괄 급여 및 퇴직금 담당자입니다. 다만, 이 자리는 2024년 12월말 갑작스럽게 회사로부터 발령통보를 받았고, 알고보니 이전 담당자의 휴직으로 인한 구원 역할이었습니다. 저는 전보대상년도도 아니었지만 일방적인 통보만을 받고 부서를 옮기게 되었습니다. 
  이 자리는 수천명의 직원들의 급여 및 명절휴가비, 평가급, 퇴직금을 지급하며, 매일매일 직원들의 내부민원에도 시달려야 하는 그야말로 사무직종에서 누구도 가고 싶지 않아하는 자리였습니다. 그럼에도 불구하고 저는 이미 결혼을 하고 자녀를 두었기에, 책임감 있게 야근,주말,퇴근 후 재택 근무까지 최선을 다해서 회사업무를 수행하고 있었습니다.  
@@ -26,9 +26,10 @@
 
  저희 회사는 사무직도 특정 자격증을 취득하면 수당을 지급하고 있습니다. 저는 급여 및 퇴직금 담당자로서 전산회계운용사 2급이상을 취득하면 수당을 받을 수 있기에 회계의 기초부터 다시 해보자 하는 마음가짐으로 우선 전산회계운용사 2급을 취득하기로 하였습니다. 향후 전산회계운용사를 취득하기까지 해당 공부일지를 남기려고 합니다.
 
- ## 오늘의 공부내용(회사는 휴가냄)  
+ ## 오늘의 공부내용 #분개 #if-else
 
- 07:20 ~ 08:20 : 전산회계운용사 2급 필기책 공부
+ * 07:20 ~ 08:20 : 전산회계운용사 2급 필기 공부  
+ * 20:00 ~ 21:00 : c언어 예제학습(with gemini)
 
  ## 오늘의 소감  
  
@@ -36,4 +37,4 @@
  
 제가 이 일기를 적는 이유는 스스로에 대한 반성과 성찰의 이유도 있지만, 저처럼 늦게라도 다시 회계사에 도전하시는 분들에게 저 같은 직장인이면서 40대도 포기하지 않고 노력하고 있으며 함께 다시 힘내보자는 격려를 드리고 싶었습니다.  
  
- **저는 과거에 회계사를 포기했었지만, 이번에는 끝까지 포기하지 않고 회계사가 되려고 합니다**         
+ **저는 과거에 회계사를 포기했었지만, 이번에는 끝까지 포기하지 않고 회계사가 되려고 합니다**
